tests/compile_fail/invalid_enable_trace.c
#define MFSM_ENABLE_TRACE 2
#include "mfsm.h"

int main(void)
{
    return 0;
}
